@@ -889,13 +889,13 @@
     <email>dwayne@translate.org.za</email>
   </person>
   <!-- io translation coordinator -->
-  <person id="mterry">
+  <person id="x-mterry">
     <name>Michael Terry</name>
     <email>mike@mterry.name</email>
     <bugzilla-account>mike@mterry.name</bugzilla-account>
   </person>
   <!-- fur translation coordinator -->
-  <person id="mfurlani">
+  <person id="x-mfurlani">
     <name>Massimo Furlani</name>
     <email>massimo.furlani@libero.it</email>
     <bugzilla-account>massimo.furlani@libero.it</bugzilla-account>
