@@ -189,7 +189,7 @@
   </team>
   <team id="fur">
     <_language id="fur">Friulian</_language>
-    <coordinator id="mfurlani"/>
+    <coordinator id="x-mfurlani"/>
   </team>
   <team id="gl">
     <_language id="gl">Galician</_language>
@@ -266,7 +266,7 @@
   </team>
   <team id="io">
     <_language id="io">Ido</_language>
-    <coordinator id="mterry"/>
+    <coordinator id="x-mterry"/>
     <mailing-list>gnome-ido@lists.mterry.name</mailing-list>
     <mailing-list-subscribe>http://lists.mterry.name/listinfo.cgi/gnome-ido-mterry.name</mailing-list-subscribe>
   </team>
