@@ -1,3 +1,10 @@
+2007-12-30  Johannes Schmid <jhs@gnome.org>
+
+	* translation-teams.xml.in:
+	* people.xml.in:
+	
+	Changes usernames without svn accounts to have a x- prefix
+
 2007-12-26  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
